<resources>
    <string name="app_name">老人监护宝</string>
    <string name="user_login">用户登录</string>
    <string name="user_register">用户注册</string>
    <string name="user_name">用户名</string>
    <string name="telphone">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="clicktoregister">点击注册</string>
    <string name="old_user">已有账户？</string>
    <string name="forget_password">忘记密码？</string>
    <string name="find_password">找回密码</string>
    <string name="change_password">修改密码</string>
    <string name="logout">安全退出</string>
    <string name="master_info">主人信息</string>
    <string name="unsupportbluetooth">设备不支持蓝牙</string>
    <string name="gender">性别：</string>
    <string name="age">年龄：</string>
    <string name="health">健康情况：</string>
    <string name="vaccine">接种疫苗情况：</string>
    <string name="remark">备注：</string>
    <string name="name">姓名：</string>
    <string name="address">地址：</string>
    <string name="phone_number">电话：</string>
    <string name="email">邮箱：</string>
    <string name="search_icon">&#xf002;</string>
    <string name="no_data">无数据显示</string>
    <string name="last_day">上一天</string>
    <string name="next_day">下一天</string>
    <string name="today_record">今日喂食记录</string>
    <string name="left_icon">&#xf0d9;</string>
    <string name="right_icon">&#xf0da;</string>
    <string name="down_icon">&#xf0d7;</string>
    <string name="food_type">食物种类</string>
    <string name="food_weight">重量/g</string>
    <string name="food_energy">能量/k</string>
    <string name="temp"> </string>
    <string name="physical_exam">体格检查</string>
    <string name="assay">化验</string>
    <string name="vaccination">疫苗接种</string>
    <string name="diagnose">诊断&amp;处方</string>
    <string name="right_arrow_icon">&#xf054;</string>
    <string name="old_password">原始密码</string>
    <string name="new_password">重设密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="add_food">添加喂食记录</string>
    <string name="add_medical">添加病历</string>
    <string name="food_type_title">食物种类</string>
    <string name="food_weight_title">食物重量</string>
    <string name="food_energy_title">食物能量</string>
    <string name="food_time_title">喂食日期</string>
    <string name="medical_editor">编辑病历</string>
    <string name="body_length">体长</string>
    <string name="body_waistline">体围</string>
    <string name="body_weight">体重</string>
    <string name="exam_result">检查结果</string>
    <string name="doctor">体检医生</string>
    <string name="doctor_comment">医生评价</string>
    <string name="doctor_advice">医生建议</string>
    <string name="urine_test">尿检验</string>
    <string name="urine_color">尿色</string>
    <string name="acid_base_reaction">酸碱反应</string>
    <string name="transparency">透明度</string>
    <string name="occult_blood">潜血</string>
    <string name="defecate_test">便检验</string>
    <string name="canine_parvovirus">犬细小病毒</string>
    <string name="neutral_fat">中性脂肪</string>
    <string name="parasite">寄生虫</string>
    <string name="muscle_fibers">肌纤维</string>
    <string name="blood_test">血液检验</string>
    <string name="red_blood_cell">红细胞</string>
    <string name="white_blood_cell">白细胞</string>
    <string name="esr">血沉</string>
    <string name="hemoglobin">血红蛋白</string>
    <string name="vaccine_name">疫苗名称</string>
    <string name="vaccine_dosage">接种剂量</string>
    <string name="vaccine_doctor">接种医生</string>
    <string name="symptom">症状</string>
    <string name="diagnosis">诊断结果</string>
    <string name="prescribe">处方</string>
    <string name="diagnose_doctor">诊断医生</string>
    <string name="finish">完成</string>
    <string name="edit">编辑</string>
    <string name="complete_data_check">请输入完整数据</string>
    <string name="time_error">输入时间格式不符</string>
    <string name="retry">重试</string>
    <string name="refresh_error">更新失败</string>
    <string name="exist_error">病历已存在</string>
    <string name="delete_record">是否删除该条记录？</string>
    <string name="delete">删除</string>
    <string name="delete_error">删除失败</string>
    <string name="get_data_error">获取数据失败</string>
    <string name="set_time_error">设置时间失败</string>
    <string name="set_data_error">存储数据失败</string>
    <string name="delete_medical">是否删除该份病历</string>
    <string name="medical_empty">还没有病历数据哦~</string>
    <string name="connect_error">连接服务器失败</string>
    <string name="login_error">请输入正确的用户名和密码！</string>
    <string name="unknown_error">未知错误！</string>
    <string name="empty_username">用户名不能为空！</string>
    <string name="used_username">用户名已经被注册</string>
    <string name="notgegistername">该用户尚未注册</string>
    <string name="standardtel">请输入正确的电话号码</string>
    <string name="plzregister">该账号未注册，请注册</string>
    <string name="empty_password">密码不能为空！</string>
    <string name="welcome_text">欢迎使用宠物管家</string>
    <string name="password_old_empty">请输入原始密码！</string>
    <string name="password_old_error">密码错误！</string>
    <string name="password_match_error">两次输入密码不一致！</string>
    <string name="password_new_empty">请输入新密码！</string>
    <string name="password_confirm_empty">请再次输入新密码！</string>
    <string name="tab_homepage">首页</string>
    <string name="tab_location">位置</string>
    <string name="tab_my">我的</string>
    <string name="tab_sport">步数</string>
    <string name="animal_error">查询信息失败</string>
    <string name="master_error">查询信息失败</string>
    <string name="animal_empty">查询不到信息</string>
    <string name="master_empty">查询不到信息</string>
    <string name="re_login">密码已修改，请重新登录！</string>
    <string name="server_url">http://39.108.105.133:8888</string>
    <string name="account_change">账号已失效，请重新登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
